[tool.poetry]
name = "extentions"
version = "0.1.0"
description = ""
authors = ["sampath <118274231+sampath017@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pillow = "^10.0.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchmetrics = "^1.0.3"
lightning = "^2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
